# nbcli

./: .flake8  .gitignore  LICENSE  README.md  README.rst  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: build-docs.yml  lint-tests.yml
.woodpecker/: build_docs.yml  lint_tests.yml  python-publish.yml
dev-env-files/nbcli_initializers/: aggregates.yml  dcim_interfaces.yml  device_types.yml  devices.yml  virtual_machines.yml
docs/: Makefile  commands.md  conf.py  dev-env.md  index.md  index.rst  init.md  init.rst  nbmodels.md  nbprint.md  nbprint.rst  nbsearch.md  nbsearch.rst  pynb.md  pynb.rst  quick-start.md  search.md  shell.md  shell.rst  show.md  show.rst  test-env.md  test-env.rst  views.md  views.rst
docs/commands/: create.md  create.rst  filter.md  filter.rst  info.md  init.md  search.md
docs/extend/: commands.md  commands.rst  views.md
docs/reference/: nbprint.md
nbcli/: __init__.py  __main__.py  __version__.py  cli.py  core.py
nbcli/commands/: __init__.py  base.py  create.py  filter.py  info.py  init.py  lsmodels.py  models.py  nbmodels.py  pynb.py  search.py  shell.py  show.py  tools.py
nbcli/core/: __init__.py  compose.py  config.py  extend.py  resolve_reference.yml  user_config.default  utils.py
nbcli/sub_commands/: __init__.py  base.py  cmd.py  init.py  lsmodels.py  pynb.py  search.py  shell.py  show.py
nbcli/user_defaults/: __init__.py  user_commands.default  user_config.default  user_config.yml.default
nbcli/views/: __init__.py  aggregates.py  base.py  circuits.py  dcim.py  device.py  extras.py  interfaces.py  ip_addresses.py  ip_prefixes.py  ipam.py  locations.py  object_changes.py  rack_groups.py  racks.py  record.py  resource.py  sites.py  tenancy.py  tools.py
netbox-docker/: update_initializers.py
netbox_client/: __init__.py  __version__.py  cli.py  cmd.py  core.py  shell.py  views.py
netbox_client/sub_commands/: __init__.py  init.py
overrides/: home.html  main.html
tests/: create-test.yml  docker-compose.override.yml  update-test.yml  upsert-test.yml
tests/dev-env-files/: create_initializers.py  docker-compose.override.yml  wait_for_service.py
tests/dev-env-files/nbcli_initializers/: clusters.yml  custom_fields.yml  groups.yml  racks.yml  sites.yml  users.yml  vlan_groups.yml
